# moduli_generator

./: .gitignore  .moduli  .moduli_generator  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CHANGELOG_GENERATOR.rst  CONFIG.rst  COPYRIGHT.rst  DATABASE_INTEGRATION.rst  DB.rst  DEFAULTS.rst  DOCSTRING_REMEDIATION_SUMMARY.md  EXAMPLE_INSTALL_LOG.txt  EXAMPLE_INSTALL_RESPONSE.txt  EXAMPLE_INSTALL_SESSION.rst  EXAMPLE_INSTALL_SESSION.txt  JUNIE FIX LIST.md  LICENSE.rst  MANIFEST.in  MARIADB.rst  MG_TEST  MIT-LICENSE.rst  MKDOCS_DOCSTRING_ANALYSIS_REPORT.md  MODULI_ASSEMBLY.rst  MODULI_CONFIG.rst  MODULI_DB.rst  MODULI_GENERATOR.rst  MODULI_GENERATOR_HELP.rst  PRE_RELEASE_ANALYSIS_REPORT.md  PYCHARM_CONFIGURATION_STATUS.md  PYCHARM_MKDOCS_SETUP.md  PYPI_READINESS_SUMMARY.md  PYTHON_PACKAGING.md  PYTHON_PACKAGING.rst  README.docker.md  README.md  README.rst  README.rst.ORG  (+60 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_readthedocs/: DEFAULTS.md  RESTART.md  about.md  readme.md  test_refactoring.md  usage.md
_readthedocs/API/: config.md
_readthedocs/assets/javascript/: readthedocs.js  readthedocs3.js
_readthedocs/database/: mariadb.md
_readthedocs/development/: improvements.md
_readthedocs/installation/: installation_logs.md
_readthedocs/user_guides/: index.md
changelog_generator/: __init__.py
changelog_generator/scripts/: __init__.py  main.py  print.py  show.py
config/: __init__.py  __version__.py  arg_parser.py  argparser_moduli_generator.py  get_version.py  moduli_generator_arg_parser.py
data/: __init__.py
data/bash_scripts/: __init__.py  build_moduli_generator_mariadb_config.sh  drop_all_moduli_generator_from_db.sh  install_mg.sh  install_mg_minimal.sh  install_wcnf_mg.sh
data/schema/: __init__.py  create_db_owner.sql  ssh_moduli_schema.sql
db/: __init__.py  common.py  errors.py  mg_mariadb_connector.py  moduli_db_utilities.py  moduli_schema.sql  test_changes.py
db/schema/: call_retrieval_procedure.sql  create_db_owner.sql  initialize_database.sql  moduli_schema.sql  ssh_moduli_retrieval.sql  ssh_moduli_schema.sql
db/scripts/: create_moduli_generator_cnf.py  create_moduli_generator_user.py  db_schema_for_named_db.py  initialize_moduli_generator.py  install_moduli_generator_schema.py  install_schema.py  install_update_user_fm_cnf.py  mariadb_safe_password_generator.py  moduli_stats.py  simple_db_schema_installer.py  simple_db_user_schema_installer.py  simple_schema_installer.py  simple_user_schema_installer.py  verify_schema.py  write_moduli_file.py  write_privileged_cnf.py
db/test_utils/: __init__.py  mocks.py
db/utils/: __init__.py
doc/doctrees/: CHANGELOG.doctree  CHANGELOG_GENERATOR.doctree  CONFIG.doctree  COPYRIGHT.doctree  DATABASE_INTEGRATION.doctree  DB.doctree  DEFAULTS.doctree  EXAMPLE_INSTALL_SESSION.doctree  LICENSE.doctree  MARIADB.doctree  MODULI_GENERATOR.doctree  README.doctree  environment.pickle  index.doctree
doc/html/: .buildinfo  .buildinfo.bak  =1.1.12  CHANGELOG.html  CHANGELOG_GENERATOR.html  CONFIG.html  COPYRIGHT.html  DATABASE_INTEGRATION.html  DB.html  DEFAULTS.html  EXAMPLE_INSTALL_SESSION.html  LICENSE.html  MARIADB.html  MODULI_GENERATOR.html  README.html  TEST.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_modules/: changelog_generator.html  config.html  db.html  index.html  moduli_generator.html
doc/html/_sources/: CHANGELOG.rst.txt  CHANGELOG_GENERATOR.rst.txt  CONFIG.rst.txt  DB.rst.txt  DEFAULTS.rst.txt  EXAMPLE_INSTALL_SESSION.rst.txt  LICENSE.rst.txt  MODULI_GENERATOR.rst.txt  TEST.rst.txt  (+2 more)
docs/: API.md  DATABASE_INTEGRATION.md  DATABASE_INTEGRATION.rst  MARIADB.md  SAMPLE_moduli_generator.cnf  SAMPLE_privileged_mariadb.cnf  SCHEMA_VERIFICATION.md  about.md  api.md  argparser.md  changelog_generator.md  config.md  copyright.md  db.md  index.md  license.md  mariadb_for_moduli_generator.md  project_improvement_recommendations.md  readme.md  requirements.in  test.md  usage.md
docs/API/: argparser.md  config.md  db.md  db.utils.md  index.md  moduli_generator.md
docs/api_reference/: config.md  index.md  overview.md
docs/database/: index.md  mariadb.md  schema_verification.md
docs/development/: CHANGELOG_CONFIGURATION.md  DOCKER_MARIADB_SETUP.md  index.md  refactoring.md
docs/examples/: command_line_installer_response.md  index.md
docs/installation/: command_line.md  command_line_installer.md  index.md  initial_test_run.md  installation_response.md  installer_complete_response.md  installer_response.md
docs/user_guides/: index.md  restart.md  usage.md
moduli_generator/: ModuliCandidate.py  __init__.py  __main__.py  _version.py  changelog_generator.py  cli.py  config.py  create_db_owner.sql  initialize_database.sql  logger_writer.py  mariadb_cnf_parser.py  moduli_generator_arg_parser.py  moduli_schema.sql  restart.py  test_show_stats.py  validators.py  version.py  write_moduli_file.py  write_ssh2_moduli_file.py
moduli_generator/scripts/: __init__.py  __main__.py  _github_installer_sh.py  build_docs.py  build_venv_from_wheel.sh  build_wheel_from_github.sh  changelog_generator.py  dbstore_moduli.py  docs_server.py  github_install.py  restart.py  update_readme.py  write_moduli_file.py  write_ssh_moduli_file.py
moduli_generator/utils/: resources.py  traversable_resources.py
scripts/: setup_docker_mariadb.sh  test_db_connection.py
test/: __init__.py  conftest.py  maraidb_cnf_parser.py  moduli_generator_show_stats.py  parameter_validation.py  test_cli_argument_parsing.py  test_cli_integration.py  test_cli_main.py  test_config_init.py  test_config_integration.py  test_coverage_boost.py  test_coverage_boost_db.py  test_coverage_improvement.py  test_database_config_simple.py  test_database_integration.py  test_db_coverage_enhancement.py  test_db_error_coverage.py  test_db_scripts.py  test_logger_writer.py  test_main.py  test_mariadb_cnf_parser.py  test_moduli_generator_integration.py  test_moduli_generator_show_stats.py  test_moduli_generator_subprocess_errors.py  test_parameter_validation.py  test_restart.py
(+48 files in other folders)
