[project]
name = "moduli_generator"
description = "A secure, high-performance SSH moduli generator with database integration for cryptographic key exchange operations"
authors = [
	{ name = "Ron Williams", email = "becker.williams@gmail.com" }
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: System Administrators",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Topic :: Security :: Cryptography",
	"Topic :: System :: Systems Administration",
	"Topic :: Security",
	"Topic :: Internet",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Environment :: Console",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Unix",
	"Operating System :: MacOS",
	"Environment :: Console",
	"Natural Language :: English",
	"Typing :: Typed"
]
dependencies = [
	"mariadb==1.1.13",
	"configparser>=7.2.0",
	"typing-extensions>=4.14.1,<5.0.0",
	"mkdocstrings[python]>=0.30.0,<0.31.0",
	"black>=25.1.0,<26.0.0",
]
keywords = ["cryptography", "ssh", "moduli", "security"]
license = { text = "MIT" }
readme = "docs/README.md"
requires-python = ">=3.11,<4.0"
version = "2.1.34"
packages = [
	"moduli_generator",
	"db",
	"config",
	"changelog_generator"
]
data = [
	'docs/**/*',
	'data/bash_scripts/*',
	'data/schema/*'
]
package-mode = true

[project.scripts]
moduli_generator = "moduli_generator.cli:main"
moduli_stats = "db.scripts.moduli_stats:main"
#changelog = "changelog_generator.generate_changelog(max_commits=50):main"
install_schema = "db.scripts.install_schema:main"
#cli = "moduli_generator.cli:main"

[project.urls]
Homepage = "https://github.com/beckerwilliams/moduli_generator"
Documentation = "https://github.com/beckerwilliams/moduli_generator/blob/main/README.rst"
Repository = "https://github.com/beckerwilliams/moduli_generator.git"
Issues = "https://github.com/beckerwilliams/moduli_generator/issues"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
configparser = "~7.2.0"
mariadb = "1.1.13"
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-autorefs = ">=1.4.2"
mkdocs-get-deps = ">=0.2.0"
mkdocs-material = ">=9.6.16,<10.0.0"
mkdocs-material-extensions = ">=1.3.1"
mkdocstrings = ">=0.30.0"
mkdocstrings-python = "1.16.12"
pymdown-extensions = ">=10.16.1"
pip-tools = ">=7.5.0,<8.0.0"
pytest = "~8.4.1"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.12.0"
pytest-asyncio = ">=0.23.0"
toml = ">=0.10.2"
typing-extensions = ">=4.14.1,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"