[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moduli_generator"
version = "1.0.1"
description = "A secure, high-performance SSH moduli file generator with database integration for cryptographic key exchange operations"
authors = ["Ron Williams <becker.williams@gmail.com>"]
readme = "docs/readme.md"
license = "MIT"
keywords = ["cryptography", "ssh", "moduli", "security"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: System Administrators",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Topic :: Security :: Cryptography",
	"Topic :: System :: Systems Administration",
	"Topic :: Security",
	"Topic :: Internet",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Environment :: Console",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Unix",
	"Operating System :: MacOS",
	"Environment :: Console",
	"Natural Language :: English",
	"Typing :: Typed"
]
packages = [
	{ include = "config" },
	{ include = "db" },
	{ include = "moduli_generator" },
	{ include = "data" },
	{ include = "test" }
]
exclude = [
	"changelog_generator/**",
	"MG_TEST",
	"site",
	"stash"
]

[tool.poetry.urls]
Homepage = "https://github.com/beckerwilliams/moduli_generator"
Documentation = "https://moduli-generator.readthedocs.io/"
Repository = "https://github.com/beckerwilliams/moduli_generator.git"
Issues = "https://github.com/beckerwilliams/moduli_generator/issues"

[tool.poetry.scripts]
moduli_generator = "moduli_generator.scripts.__main__:main"
moduli_stats = "db.scripts.moduli_stats:main"
install_schema = "db.scripts.install_moduli_generator_schema:main"
restart_screening = "moduli_generator.scripts.restart:main"
write_ssh_moduli_file = "moduli_generator.write_ssh2_moduli_file:main"
changelog = "changelog_generator.scripts.show:main"
create_moduli_generator_cnf = "db.scripts.create_moduli_generator_cnf:main"
mariadb_safe_password = "db.scripts.mariadb_safe_password_generator:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
configparser = ">=7.2.0"
typing-extensions = ">=4.14.1,<5.0.0"

[tool.poetry.group.runtime.dependencies]
mariadb = ">=1.1.13"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
pip-tools = ">=7.5.0,<8.0.0"
pytest = "~8.4.1"
pytest-cov = "2.12.1"
pytest-mock = ">=3.12.0"
pytest-asyncio = ">=0.23.0"
toml = ">=0.10.2"
coverage = "^7.10.2"
poetry = ">=1.8.3,<2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.1"
mkdocs-autorefs = ">=1.4.2"
mkdocs-get-deps = ">=0.2.0"
mkdocs-material = ">=9.6.16,<10.0.0"
mkdocs-material-extensions = ">=1.3.1"
mkdocstrings = ">=0.30.0"
mkdocstrings-python = "1.16.12"
pymdown-extensions = ">=10.16.1"
